# CrazyS

./: .gitignore  .travis.yml  CITATION.cff  CONTRIBUTING.md  CrazyS-on-Arch-Linux-with-ROS-Melodic-and-Gazebo-10.md  README.md  rotors_demos.rosinstall  rotors_hil.rosinstall  rotors_minimal.rosinstall
.github/: config.yml
.github/workflows/: kinetic.yml  main.yml  melodic.yml  noetic.yml
rotors_comm/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_control/include/rotors_control/: common.h  complementary_filter_crazyflie2.h  controller_parameters.h  controller_parameters_mellinger.h  crazyflie_onboard_controller.h  internal_model_controller.h  lee_position_controller_alpha.h  mellinger_controller.h  parameters.h  parameters_ros.h  position_controller.h  position_controller_with_stateEstimator.h  position_controller_without_stateEstimator.h  roll_pitch_yawrate_thrust_controller_crazyflie.h  roll_pitch_yawrate_thrust_crazyflie.h  sensfusion6.h  stabilizer_types.h
rotors_control/src/nodes/: lee_position_controller_alpha_node.cpp  lee_position_controller_alpha_node.h  position_controller_node.cpp  position_controller_node.h  position_controller_node_with_stateEstimator.cpp  position_controller_node_with_stateEstimator.h  position_controller_node_without_stateEstimator.cpp  position_controller_node_without_stateEstimator.h  roll_pitch_yawrate_thrust_crazyflie_node.cpp  roll_pitch_yawrate_thrust_crazyflie_node.h
rotors_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_description/urdf/: component_snippets.xacro  crazyflie2.xacro  crazyflie2_base.xacro  crazyflie2_base_forster.xacro  crazyflie2_forster.xacro
rotors_evaluation/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_gazebo/: .travis.yml  CHANGELOG.rst  CMakeLists.txt  dependencies.rosinstall  package.xml
rotors_gazebo/include/rotors_gazebo/: hovering_example_spline.h  parameters.h  parameters_ros.h  spline_trajectory_generator.h
rotors_gazebo/launch/: crazyflie2_hovering_example.launch  crazyflie2_internal_model_controller.launch  crazyflie2_internal_model_controller_vi_sensor.launch  crazyflie2_mellinger_controller.launch  crazyflie2_octomap.launch  crazyflie2_swarm_hovering_example.launch  crazyflie2_with_joy.launch  crazyflie2_without_controller.launch  crazyflie_hovering_lee_controller_alpha.launch  crazyflie_with_joy.launch  firefly_swarm_hovering_example.launch  mav_hovering_example.launch  mav_hovering_example_with_vi_sensor.launch  spawn_mav.launch  spawn_mav_crazyflie.launch  spawn_mav_crazyflie_forster.launch
rotors_gazebo/resource/: controller_crazyflie2.yaml  controller_crazyflie2_with_stateEstimator.yaml  crazyflie2_lee_controller_alpha.yaml  crazyflie_internal_model_controller.yaml  crazyflie_lee_controller_alpha.yaml  crazyflie_mellinger_controller.yaml  crazyflie_parameters.yaml  roll_pitch_yawrate_thrust_controller_crazyflie2.yaml  spline_trajectory.yaml
rotors_gazebo/rviz/: crazyflie_octomap.rviz  crazyflie_vi_sensor.rviz
rotors_gazebo/spline_generator/: spline.py
rotors_gazebo/spline_generator/data_points_files/: circular_path.csv
rotors_gazebo/spline_generator/matlab_scripts/: circular_path.asv  circular_path.m
rotors_gazebo/spline_generator/spline/: circular_path.json
rotors_gazebo/src/: hovering_example_spline.cpp
rotors_gazebo/src/nodes/: hovering_example_spline.cpp  hovering_example_spline_swarm.cpp  hovering_lee.cpp  lee_linear1_1_polynomial.cpp  lee_semicirc.cpp  lee_semicirc_polynomial.cpp  linear1_1.cpp  semicirc.cpp  semicirc2.cpp  square.cpp  swarm_lee_linear1_0.cpp  swarm_lee_linear1_1.cpp  swarm_lee_semicirc.cpp
rotors_gazebo/worlds/: basic.world  basic_crazyflie.world  delta_wing.world  empty.world  house.world  iris.world  iris_opt_flow.world  octomap_crazyflie.world  pelican.world  plane.world  rubble.world  solo.world  standard_vtol.world  tailsitter.world  typhoon_h480.world  warehouse.world  waypoint.world
rotors_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_gazebo_plugins/include/rotors_gazebo_plugins/: gazebo_imu_plugin.h  gazebo_motor_model.h
rotors_gazebo_plugins/src/: gazebo_imu_plugin.cpp  gazebo_motor_model.cpp  gazebo_odometry_plugin.cpp
rotors_hil_interface/: CHANGELOG.rst  package.xml
rotors_joy_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_joy_interface/include/rotors_joy_interface/: joy_crazyflie.h
rotors_joy_interface/src/: joy_crazyflie.cpp
rotors_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
rqt_rotors/: CHANGELOG.rst  CMakeLists.txt  package.xml
