<package format="2">
  <name>rotors_gazebo_plugins</name>
  <version>7.0.1</version>
  <description>The rotors_gazebo_plugins package</description>

  <maintainer email="giuseppe.silano@fel.cvut.cz">Giuseppe Silano</maintainer>
  <maintainer email="luigi.iannelli@unisannio.it">Luigi Iannelli</maintainer>

  <author>Giuseppe Silano</author>
  <author>Emanuele Aucone</author>
  <author>Benjamin Rodriguez</author>
  <author>Luigi Iannelli</author>
  <author>Daniele Morra</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/gsilano/CrazyS</url>
  <url type="bugtracker">https://github.com/gsilano/CrazyS/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>protobuf-dev</depend>
  <depend>mavros</depend>
  <depend>mav_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>octomap</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>rotors_comm</depend>
  <depend>rotors_control</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>yaml-cpp</depend>

</package>
