<package>
  <name>rotors_simulator</name>
  <version>2.1.1</version>
  <description>RotorS is a MAV gazebo simulator.</description>

  <maintainer email="giuseppe.silano@unisannio.it">Giuseppe Silano</maintainer>
  <maintainer email="luigi.iannelli@unisannio.it">Luigi Iannelli</maintainer>

  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Mina Kamel</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/gsilano/CrazyS</url>
  <url type="bugtracker">https://github.com/gsilano/CrazyS/issues</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rotors_comm</run_depend>
  <run_depend>rotors_control</run_depend>
  <run_depend>rotors_description</run_depend>
  <run_depend>rotors_evaluation</run_depend>
  <run_depend>rotors_gazebo</run_depend>
  <run_depend>rotors_gazebo_plugins</run_depend>
  <run_depend>rotors_hil_interface</run_depend>
  <run_depend>rotors_joy_interface</run_depend>
  <run_depend>rqt_rotors</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
